# ParkingLot

./: .editorconfig  .gitignore  Dockerfile  Makefile  ParkingLot.drawio  README.md  docker-compose.yaml  pyproject.toml  req.txt
apps/parking/: admin.py  models.py  serializers.py  views.py
apps/parking/migrations/: 0001_initial.py  0002_rename_car_model_car_model_and_more.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_is_active_user_is_admin.py
apps/utils/: models.py
apps/utils/migrations/: 0001_initial.py
autostate/config/settings/: base.py
autostate/config/settings/templates/: settings.dev.py
config/config/: settings.py
core/config/: urls.py
core/config/settings/: __init__.py  base.py
parkinglot/: pyproject.toml
parkinglot/config/: urls.py
parkinglot/config/settings/: __init__.py  base.py
parkinglot/core/config/settings/: __init__.py
